--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,111 @@
     padding: 0;
     box-sizing: border-box;
 }
+/* ---- reset ---- */
+
+body {
+    margin: 0;
+}
+
+canvas {
+    display: block;
+}
+.wrapper {
+    margin-top: 6vh;
+    position: absolute;
+    font-size: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    text-align: center;
+    max-width: 90vw;
+    z-index: 2;
+}
+.column {
+    float: left;
+    width: 50%;
+    text-align: left;
+}
+.column img {
+    margin-left: 40px;
+    margin-bottom: 25vh;
+}
+.column .banner {
+    margin: 0;
+    height: auto;
+    width: 100%;
+}
+h1 {
+    margin-left: 40px;
+    color: white;
+    margin-bottom: 3vh;
+}
+
+h4 {
+    margin-left: 40px;
+    color: gray;
+    font-weight: 500;
+    margin-bottom: 2vh;
+}
+a {
+    text-decoration: none;
+}
+.button {
+    width: 10rem;
+    height: 2rem;
+    font-size: 1.5rem;
+    margin-left: 40px;
+    margin-top: 15px;
+    background-color: green;
+    text-align: center;
+    border-radius: 20px;
+    text-decoration: none;
+}
+/* Clear floats after the columns */
+.wrapper:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.stats {
+    margin-top: 90vh;
+    position: relative;
+    background-color: #3821ff;
+    width: 100%;
+    height: 10vh;
+    z-index: 3;
+    text-align: center;
+}
+.stats ol {
+    margin-top: 20px;
+    position: relative;
+    vertical-align: middle;
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: white;
+    border-color: white;
+    border-width: 0px 22px 0px 0px;
+}
+.stats ol il {
+    vertical-align: middle;
+    margin: 25px;
+    padding-right: 80px;
+    border-color: white;
+    border-style: solid;
+    border-width: 0px 0.5px 0px 0px;
+}
+
+/* ---- particles.js container ---- */
+/*https://github.com/VincentGarreau/particles.js*/
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 90vh;
+    background-color: #131921;
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    z-index: 2;
+}
