--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ canvas {
 }
 .wrapper {
     margin-top: 6vh;
-    position: absolute;
+    position: relative;
     font-size: 30px;
     margin-left: auto;
     margin-right: auto;
@@ -44,13 +44,11 @@ canvas {
     width: 40vw;
 }
 h1 {
-    margin-left: 40px;
     color: white;
     margin-bottom: 3vh;
 }
 
 h4 {
-    margin-left: 40px;
     color: gray;
     font-weight: 500;
     margin-bottom: 2vh;
@@ -108,11 +106,88 @@ a {
 #particles-js {
     position: absolute;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-color: #131921;
     background-image: url("");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    z-index: 2;
+    z-index: 1;
+}
+/*Flex container*/
+.flex-container {
+    display: flex;
+    background-color: #3821ff;
+
+    padding: 100px 0px 100px 0px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.descubre h2 {
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.descubre h5 {
+    font-size: 1rem;
+    text-align: center;
+    margin-bottom: 50px;
+}
+.flex-container2 {
+    display: flex;
+    background-color: #3821ff;
+
+    padding: 100px 0px 100px 0px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.flex-item-sec {
+    display: flex;
+    background-color: rgba(251, 0, 0, 0.459);
+    margin-top: 50px;
+    width: 30vw;
+    height: 40vh;
+
+    flex-direction: column;
+    justify-content: center;
+
+    font-size: 20px;
+}
+.flex-item-sec img {
+    width: 138px;
+    height: 138px;
+    margin: auto;
+}
+.flex-item-sec h1 {
+    font-size: 2rem;
+    text-align: center;
+}
+.flex-item-sec p {
+    font-size: 1rem;
+    text-align: justify;
+}
+.flex-item-sec .button {
+    margin: auto;
+}
+.wasap {
+    position: fixed;
+    top: 88vh;
+    left: 90vw;
+}
+.wasap img {
+    width: 100px;
+    height: auto;
+}
+
+.flex-item {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.459);
+    margin-top: 50px;
+    width: 45vw;
+    height: 100vh;
+
+    flex-direction: column;
+    justify-content: center;
+
+    font-size: 20px;
 }
