--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,28 @@ canvas {
     float: left;
     width: 50%;
     text-align: left;
-    margin-bottom: 25vh;
+}
+.left {
+    margin-top: 20vh;
 }
 .column img {
     margin-left: 40px;
-    margin-bottom: 15vh;
+
     width: auto;
     height: 4rem;
 }
-.column .banner {
-    margin: 0;
-    height: auto;
-    width: 40vw;
+#banner {
+    float: left;
+    width: 50%;
+    top: 5vh;
+}
+#banner img {
+    display: flex;
+    width: auto;
+    height: 35rem;
+    text-align: center;
+    align-items: center;
+    margin: auto;
 }
 h1 {
     color: white;
@@ -65,6 +75,20 @@ a {
     background-color: green;
     text-align: center;
     border-radius: 20px;
+    text-decoration: none;
+}
+.button2 {
+    width: 10rem;
+    height: 2rem;
+    font-size: 1rem;
+    margin-left: 40px;
+    margin-top: 15px;
+    margin: auto;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    border-color: red;
+    border-radius: 20px;
+
     text-decoration: none;
 }
 /* Clear floats after the columns */
@@ -106,7 +130,7 @@ a {
 #particles-js {
     position: absolute;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
     background-color: #131921;
     background-image: url("");
     background-repeat: no-repeat;
@@ -117,9 +141,9 @@ a {
 /*Flex container*/
 .flex-container {
     display: flex;
-    background-color: #3821ff;
-
-    padding: 100px 0px 100px 0px;
+    background-color: #ffffff;
+    margin-top: 17.5vh;
+    padding: 0 0px 0 0px;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
@@ -135,22 +159,26 @@ a {
 }
 .flex-container2 {
     display: flex;
-    background-color: #3821ff;
+    background-color: #ffffff;
 
     padding: 100px 0px 100px 0px;
     flex-wrap: wrap;
     justify-content: space-evenly;
 }
+.flex-item h1 {
+    color: black;
+    padding: 20px;
+}
 .flex-item-sec {
     display: flex;
-    background-color: rgba(251, 0, 0, 0.459);
+    background-color: rgb(255, 255, 255);
     margin-top: 50px;
     width: 30vw;
-    height: 40vh;
-
+    height: 50vh;
+    overflow: auto;
     flex-direction: column;
     justify-content: center;
-
+    min-width: 420px;
     font-size: 20px;
 }
 .flex-item-sec img {
@@ -159,6 +187,7 @@ a {
     margin: auto;
 }
 .flex-item-sec h1 {
+    color: black;
     font-size: 2rem;
     text-align: center;
 }
@@ -171,7 +200,7 @@ a {
 }
 .wasap {
     position: fixed;
-    top: 88vh;
+    top: 90vh;
     left: 90vw;
 }
 .wasap img {
@@ -181,10 +210,10 @@ a {
 
 .flex-item {
     display: flex;
-    background-color: rgba(255, 255, 255, 0.459);
-    margin-top: 50px;
+    background-color: rgb(255, 255, 255);
+    margin-top: 0px;
     width: 45vw;
-    height: 100vh;
+    height: 80vh;
 
     flex-direction: column;
     justify-content: center;
