--- a/css/style.css
+++ b/css/style.css
@@ -78,19 +78,31 @@ a {
     text-decoration: none;
 }
 .button2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 10rem;
     height: 2rem;
     font-size: 1rem;
     margin-left: 40px;
     margin-top: 15px;
     margin: auto;
-    background-color: rgb(255, 255, 255);
-    text-align: center;
-    border-color: red;
+    border: 2px solid rgb(255, 0, 0);
     border-radius: 20px;
+    background-color: rgb(255, 255, 255);
 
     text-decoration: none;
 }
+.button2:hover {
+    background-color: orange;
+
+    transition: 0.5s;
+}
+.button2 a:hover {
+    color: white;
+    transition: 0.3s;
+}
+
 /* Clear floats after the columns */
 .wrapper:after {
     content: "";
