--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,20 @@ canvas {
     width: 50%;
     top: 5vh;
 }
+@media (max-width: 1200px) {
+    #banner {
+        display: none;
+        position: fixed;
+        width: 0%;
+    }
+    .column {
+        float: none;
+        text-align: center;
+        width: 100%;
+        justify-content: center;
+    }
+}
+
 #banner img {
     display: flex;
     width: auto;
@@ -239,4 +253,222 @@ a {
     justify-content: center;
 
     font-size: 20px;
+}
+
+.clientes {
+    text-align: center;
+    margin-top: 5vh;
+}
+
+.clientes ul li {
+    display: inline-block;
+    margin-top: 12vh;
+}
+.clientes img {
+    width: 200px;
+    height: 200px;
+    margin: 50px;
+}
+.timeline {
+    position: relative;
+    background-color: #bbd622;
+    margin: 25px auto;
+    padding: 10px;
+    height: 65vh;
+    z-index: -1;
+}
+
+.timeline .center-line {
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    background-color: #f6f6f6;
+    top: 50%;
+    z-index: 5;
+}
+.timeline {
+    display: flex;
+    justify-content: space-between;
+}
+.row-1 {
+    align-self: flex-start;
+}
+.row-2 {
+    align-self: flex-end;
+}
+
+.timeline .row section {
+    position: relative;
+    background-color: white;
+    border-radius: 10px;
+
+    width: 18vw;
+    height: 20vh;
+    text-align: center;
+    padding: 5px;
+    margin: 20px;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+}
+
+.row {
+    overflow: hidden;
+    position: relative;
+}
+.row::before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    background-color: white;
+    left: 50%;
+    transform: rotate(45deg);
+}
+.row-1::before {
+    bottom: 9px;
+}
+.row-2::before {
+    top: 9px;
+}
+.iconos {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 80px;
+    top: 45%;
+    z-index: 10;
+    overflow: hidden;
+}
+.iconos .iconcon {
+    display: flex;
+    width: 18vw;
+    height: 100px;
+    height: 100%;
+    overflow: hidden;
+    justify-content: center;
+}
+.iconos .icon {
+    margin: auto;
+
+    line-height: 50px;
+    text-align: center;
+    height: 60px;
+    width: auto;
+    border-radius: 50%;
+    overflow: hidden;
+}
+.padre {
+    overflow: hidden;
+    background-color: tomato;
+    height: 80px;
+    width: 80px;
+    display: flex;
+    align-items: center;
+    border-radius: 50%;
+}
+
+@media (max-width: 900px) {
+    .flex-container {
+        margin-top: 25vh;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .flex-item {
+        width: 60vw;
+        height: 50vh;
+    }
+
+    .timeline {
+        position: relative;
+        flex-direction: column;
+        height: auto;
+        background-color: thistle;
+        width: 100%;
+        overflow: hidden;
+    }
+    .row {
+        margin-left: 80px;
+    }
+    .row-1 {
+        align-self: flex-start;
+    }
+    .row-2 {
+        align-self: flex-start;
+    }
+
+    .timeline .center-line {
+        position: absolute;
+        height: 100%;
+        width: 8px;
+        background-color: #000000;
+        left: 6%;
+        z-index: 5;
+        overflow: hidden;
+        top: 0;
+        margin: auto;
+    }
+    .timeline .row section {
+        position: relative;
+        background-color: white;
+        border-radius: 10px;
+
+        width: 80vw;
+        height: 20vh;
+        text-align: center;
+        padding: 5px;
+        margin: 20px;
+        display: flex;
+        justify-content: center;
+        overflow: hidden;
+    }
+    .row-1::before {
+        top: 50%;
+        left: 10px;
+    }
+    .row-2::before {
+        top: 50%;
+        left: 10px;
+    }
+    .iconos {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+
+        top: 7%;
+        z-index: 10;
+        overflow: hidden;
+    }
+    .iconos .iconcon {
+        display: flex;
+        width: 10vw;
+
+        height: 100%;
+        overflow: hidden;
+        justify-content: center;
+    }
+    .iconos .icon {
+        margin: auto;
+
+        line-height: 50px;
+        text-align: center;
+        height: 60px;
+        width: auto;
+        border-radius: 50%;
+        overflow: hidden;
+    }
+    .padre {
+        overflow: hidden;
+        background-color: tomato;
+        height: 80px;
+        width: 80px;
+        display: flex;
+        align-items: center;
+        border-radius: 50%;
+    }
 }
