--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 /* ---- reset ---- */
@@ -35,6 +36,7 @@ canvas {
     text-align: center;
     max-width: 90vw;
     z-index: 2;
+    height: 100vh;
 }
 .column {
     float: left;
@@ -42,7 +44,7 @@ canvas {
     text-align: left;
 }
 .left {
-    margin-top: 20vh;
+    margin-top: 10vh;
 }
 .column img {
     margin-left: 0px;
@@ -55,12 +57,52 @@ canvas {
     width: 40%;
     margin-top: 10vh;
 }
+.ver {
+    position: absolute;
+    z-index: 1;
+}
+.arrow {
+    z-index: 4;
+    position: absolute;
+    width: 100%;
+    font-size: 1.5rem;
+    text-align: center;
+    color: white;
+    top: 90%;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+.bounce {
+    animation-name: bounce;
+    animation-timing-function: ease;
+}
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+    30% {
+        transform: translateY(-30px);
+    }
+    50% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+.arrow img {
+    width: auto;
+    height: 45px;
+}
+.arrow a {
+    color: inherit;
+}
 .button {
-    width: 20rem;
-    height: 4rem;
-    font-size: 2rem;
+    width: 15rem;
+    height: 3rem;
+    font-size: 1.5rem;
     margin: 0;
-    line-height: 4rem;
+    line-height: 3rem;
     margin-top: 15px;
     background-color: #f59a21;
     text-align: center;
@@ -172,13 +214,13 @@ a {
 #particles-js {
     position: absolute;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     background-color: #131921;
     background-image: url("");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 50%;
-    z-index: 1;
+    z-index: 2;
 }
 /*Flex container*/
 .flex-container {
@@ -264,7 +306,7 @@ a {
 }
 .wasap {
     position: fixed;
-    z-index: 15;
+    z-index: 1;
     bottom: 0%;
 }
 .wasap img {
@@ -299,17 +341,20 @@ a {
     height: 200px;
     margin: 50px;
 }
+.contenedor {
+    background: linear-gradient(213.54deg, #ebc61d 10.15%, #faa51a 88.66%);
+    z-index: -2;
+}
 .timeline {
     position: relative;
-    background: linear-gradient(213.54deg, #ebc61d 10.15%, #faa51a 88.66%);
     margin: 25px auto;
     padding: 10px;
     height: 70vh;
-    z-index: -1;
+    z-index: 0;
 }
 .como h1 {
     text-align: center;
-    color: black;
+    color: white;
 }
 
 .timeline .center-line {
