--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ a {
 }
 .descubre h2 {
     color: white;
-    font-size: 4.5rem;
+    font-size: 3rem;
     text-align: center;
     line-height: 20vh;
 }
@@ -308,7 +308,8 @@ a {
 .wasap {
     position: fixed;
     z-index: 1;
-    bottom: 0%;
+    bottom: 1%;
+    right: 1%;
 }
 .wasap img {
     width: 75px;
@@ -329,6 +330,7 @@ a {
 }
 
 .clientes {
+    opacity: 0;
     text-align: center;
     margin-top: 5vh;
 }
@@ -348,15 +350,17 @@ a {
 }
 .timeline {
     position: relative;
-    margin: 25px auto;
+    margin: 10px auto;
     padding: 10px;
     height: 80vh;
     z-index: 0;
     overflow: hidden;
 }
 .como h1 {
+    margin-top: 80px;
     text-align: center;
     color: white;
+    font-size: 3rem;
 }
 
 .timeline .center-line {
@@ -442,7 +446,7 @@ a {
 }
 .iconos .icon {
     margin: auto;
-
+    display: none;
     line-height: 50px;
     text-align: center;
     height: 60px;
@@ -452,7 +456,7 @@ a {
 }
 .padre {
     overflow: hidden;
-    background-color: tomato;
+    background-color: white;
     height: 80px;
     width: 80px;
     display: flex;
