--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ canvas {
     margin-top: 10vh;
 }
 .column img {
-    margin-left: 0px;
+    margin-left: -16px;
 
     width: auto;
     height: 6rem;
@@ -76,6 +76,10 @@ canvas {
     animation-name: bounce;
     animation-timing-function: ease;
 }
+.bounce-left {
+    animation-name: bounce-left;
+    animation-timing-function: ease;
+}
 @keyframes bounce {
     0% {
         transform: translateY(0);
@@ -88,6 +92,20 @@ canvas {
     }
     100% {
         transform: translateY(0);
+    }
+}
+@keyframes bounce-left {
+    0% {
+        transform: translateX(0);
+    }
+    30% {
+        transform: translateX(30px);
+    }
+    50% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(0);
     }
 }
 .arrow img {
@@ -108,7 +126,9 @@ canvas {
     text-align: center;
     border-radius: 30px;
     text-decoration: none;
-    color: whitesmoke;
+    color: #131921;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
     font-family: "myriad";
 }
 @media (max-width: 1200px) {
@@ -163,10 +183,11 @@ a {
     border: 3px solid #f8ac1b;
     border-radius: 20px;
     margin: auto;
-    background-color: rgb(255, 255, 255);
+    background-color: #f8ac1b;
 
     text-decoration: none;
 }
+/*
 .button2:hover {
     background-color: orange;
     color: white;
@@ -174,7 +195,7 @@ a {
 }
 .button2 a:hover {
     transition: 0.3s;
-}
+}*/
 
 /* Clear floats after the columns */
 .wrapper:after {
@@ -223,6 +244,7 @@ a {
     background-position: 50% 50%;
     z-index: 2;
 }
+
 /*Flex container*/
 .flex-container {
     position: relative;
@@ -263,6 +285,7 @@ a {
     color: black;
     font-size: 3rem;
     padding: 0px;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .flex-item p {
     color: black;
@@ -272,6 +295,7 @@ a {
 }
 .flex-item img {
     width: 100%;
+    margin-top: 100px;
 }
 .flex-item-sec {
     display: flex;
@@ -350,17 +374,29 @@ a {
 }
 .timeline {
     position: relative;
-    margin: 10px auto;
+    margin: 0px auto;
     padding: 10px;
-    height: 80vh;
+    height: 65vh;
     z-index: 0;
     overflow: hidden;
 }
+.como {
+    overflow: hidden;
+}
+.details h2 {
+    margin-bottom: 25px;
+}
+.details p {
+    font-family: "myriad";
+}
 .como h1 {
-    margin-top: 80px;
+    margin-top: 0px;
+    transform: translateY(30px);
     text-align: center;
     color: white;
     font-size: 3rem;
+
+    text-shadow: 0px 0px 10px black;
 }
 
 .timeline .center-line {
