--- a/css/team.css
+++ b/css/team.css
@@ -44,8 +44,8 @@ body {
 
 .navbar2 ul li {
     vertical-align: middle;
-    font-size: 25px;
-    color: white;
+    font-size: 18px;
+    color: gray;
     margin: 0 40px;
     display: inline-block;
 }
@@ -74,8 +74,8 @@ body {
     margin-right: 65px;
 }
 .navbar ul li {
-    font-size: 25px;
-    color: white;
+    font-size: 18px;
+    color: gray;
     margin: 0 40px;
     display: inline-block;
 }
