--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,7 @@ canvas {
 .navbar2 ul li {
     vertical-align: middle;
     font-size: 18px;
-    color: gray;
+    color: white;
     margin: 0 40px;
     display: inline-block;
 }
@@ -145,7 +145,7 @@ canvas {
 }
 .navbar ul li {
     font-size: 18px;
-    color: gray;
+    color: white;
     margin: 0 40px;
     display: inline-block;
 }
