--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ canvas {
     width: 100%;
     line-height: 8vh;
     vertical-align: middle;
-    background-color: rgb(0, 0, 0);
+    background-color: #141921;
 }
 .navbar2 img {
     margin-left: 65px;
@@ -196,6 +196,22 @@ canvas {
     border-radius: 30px;
     text-decoration: none;
     color: #131921;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    font-family: "myriad";
+}
+.button3 {
+    width: 15rem;
+    height: 3rem;
+    font-size: 1.25rem;
+    margin: 0;
+    line-height: 3rem;
+    margin-top: 15px;
+    background-color: #f59a21;
+    text-align: center;
+    border-radius: 30px;
+    text-decoration: none;
+    color: white;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     font-family: "myriad";
