--- a/css/team.css
+++ b/css/team.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     line-height: 6vh;
     vertical-align: middle;
-    background-color: rgb(0, 0, 0);
+    background-color: #141921;
 }
 .navbar2 img {
     margin-left: 65px;
