--- a/css/style.css
+++ b/css/style.css
@@ -195,15 +195,15 @@ canvas {
     text-align: center;
     border-radius: 30px;
     text-decoration: none;
-    color: #131921;
+    color: white;
     animation-duration: 2s;
     animation-iteration-count: infinite;
     font-family: "myriad";
 }
 .button3 {
-    width: 15rem;
+    width: 10rem;
     height: 3rem;
-    font-size: 1.25rem;
+    font-size: 1.45rem;
     margin: 0;
     line-height: 3rem;
     margin-top: 15px;
@@ -215,6 +215,7 @@ canvas {
     animation-duration: 2s;
     animation-iteration-count: infinite;
     font-family: "myriad";
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 @media (max-width: 1200px) {
     #banner {
@@ -676,6 +677,7 @@ a {
 .flexpar h1 {
     color: black;
     font-size: 3rem;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
 .flexpar {
     display: flex;
