--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ canvas {
     display: block;
 }
 .wrapper {
-    margin-top: 6vh;
+    margin-top: 50px;
     position: relative;
     font-size: 30px;
     font-family: "poppinsbold";
@@ -233,22 +233,16 @@ canvas {
     font-family: "myriad";
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-@media (max-width: 1200px) {
-    #banner {
-        display: none;
-        position: fixed;
-        width: 0%;
-    }
-    .column {
-        float: none;
-        text-align: center;
-        width: 100%;
-        justify-content: center;
-    }
-    .button {
-        margin: auto;
-        margin-bottom: 40vh;
-    }
+.button4:hover {
+    cursor: pointer;
+}
+.contacto {
+    background-color: whitesmoke;
+    width: 622px;
+    height: 400px;
+    text-align: left;
+    margin-left: 75px;
+    overflow-y: hidden;
 }
 
 #banner img {
@@ -440,6 +434,7 @@ a {
     margin: auto;
 }
 .wasap {
+    display: none;
     position: fixed;
     z-index: 1;
     bottom: 1%;
@@ -624,6 +619,7 @@ a {
 }
 .foot {
     background-color: orange;
+    text-align: center;
 }
 .iconos2 li img {
     width: 10px;
@@ -697,6 +693,7 @@ a {
     background-color: #131921;
     text-align: center;
     padding-top: 20px;
+    padding: 0 80px;
 }
 .flex-foot {
     display: flex;
@@ -716,13 +713,7 @@ a {
     color: white;
     font-family: "myriad";
 }
-.contacto {
-    background-color: whitesmoke;
-    width: 622px;
-    height: 400px;
-    text-align: left;
-    margin-left: 150px;
-}
+
 .contacto h1 {
     text-align: left;
     margin: 0 20px;
@@ -738,11 +729,11 @@ form input {
     font-size: 15px;
 }
 #firstname {
-    width: 237px;
+    width: 200px;
     height: 40px;
 }
 #lastname {
-    width: 237px;
+    width: 200px;
     height: 40px;
     margin-left: 18px;
 }
@@ -790,7 +781,61 @@ form input {
     font-size: 1.5rem;
     margin-bottom: 40px;
 }
-
+@media (min-width: 900px) {
+    .menus {
+        display: none;
+        background-color: tomato;
+    }
+}
+@media (max-width: 1200px) {
+    #banner {
+        display: none;
+        position: fixed;
+        width: 0%;
+    }
+    #firstname {
+        width: 300px;
+        height: 40px;
+        margin-left: 0px;
+    }
+    #lastname {
+        width: 300px;
+        height: 40px;
+        margin-left: 0px;
+    }
+    .column {
+        float: none;
+        text-align: center;
+        width: 100%;
+        justify-content: center;
+        margin: 0;
+        margin-top: 100px;
+    }
+    .left {
+        margin-top: 50px;
+        vertical-align: middle;
+    }
+    .wrapper {
+        margin-top: 0;
+    }
+    .button {
+        margin: auto;
+        margin-bottom: 0vh;
+    }
+    .flexpar {
+        padding: 0 40px;
+    }
+    .flextext {
+        width: 40vw;
+    }
+    .footer {
+        margin: 0 40px;
+    }
+    .contacto {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+}
 @media (max-width: 900px) {
     .left {
         margin-top: 0;
@@ -813,7 +858,7 @@ form input {
         font-size: 2.5rem;
     }
     .descubre {
-        height: 40vh;
+        height: 20vh;
     }
 
     .descubre h2 {
@@ -823,9 +868,12 @@ form input {
         position: relative;
         flex-direction: column;
         height: auto;
-        background-color: thistle;
+        background: linear-gradient(213.54deg, #ebc61d 10.15%, #faa51a 88.66%);
         width: 100%;
         overflow: hidden;
+    }
+    .back {
+        display: none;
     }
     .row {
         margin-left: 80px;
@@ -902,22 +950,97 @@ form input {
     }
     .padre {
         overflow: hidden;
-        background-color: tomato;
+        background-color: white;
         height: 80px;
         width: 80px;
         display: flex;
         align-items: center;
         border-radius: 50%;
     }
-
+    .navbar2 .menu {
+        display: none;
+    }
+    .flex-item {
+        height: 50vh;
+    }
+    .flexpar {
+        flex-direction: column;
+        align-items: center;
+    }
+    .fleximg {
+        order: 1;
+    }
+    .flextext {
+        text-align: center;
+        width: 70vw;
+    }
+    .flexpar img {
+        margin-top: 80px;
+    }
+    .flexpar a {
+        display: flex;
+        justify-content: center;
+    }
+    .flex-foot {
+        flex-direction: column;
+        align-items: center;
+    }
+    .foot-desc {
+        margin: 0in;
+        width: 70vw;
+        margin-bottom: 40px;
+    }
+    .iconos2 {
+        margin: 30px 0px;
+    }
+    .footer {
+        padding: 0;
+    }
+    .contacto {
+        width: 80vw;
+    }
     @media (max-width: 425px) {
+        .navbar2 {
+            height: 55px;
+        }
+        .column {
+            margin-top: 125px;
+        }
+        .column h1 {
+            font-size: 2rem;
+        }
+        .column p {
+            font-size: 1.5rem;
+            margin-bottom: 10px;
+        }
+        .flex-container {
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .flex-item {
+            height: auto;
+            width: 90%;
+        }
+        .flexpar {
+            margin-left: 0;
+            margin-right: 0;
+            padding: 0;
+        }
+        .flextext {
+            width: 90%;
+        }
+
         .flex-container .flex-item {
             min-width: 80vw;
             text-align: center;
         }
         .descubre {
-            margin-top: 0;
+            margin: 0 0;
+            height: auto;
             padding: 0 30px;
+        }
+        .descubre h2 {
+            font-size: 3rem;
         }
         .flex-container2 .flex-item-sec {
             min-width: 80vw;
@@ -946,6 +1069,30 @@ form input {
         }
         .timeline .row section {
             width: 75vw;
+        }
+        .contenedor {
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .equipo {
+            margin-left: 0;
+            margin-right: 0;
+        }
+        .foot-desc h1 {
+            font-size: 2.5rem;
+        }
+        .foot-desc p {
+            font-size: 1.2rem;
+        }
+        .contacto {
+            height: auto;
+        }
+        .iconos2 {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+        .icc {
+            margin: 0;
         }
     }
 }
