--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,7 @@ canvas {
     text-align: left;
     margin-left: 75px;
     overflow-y: hidden;
+    border-radius: 10px;
 }
 
 #banner img {
@@ -477,6 +478,7 @@ a {
     background: linear-gradient(213.54deg, #ebc61d 10.15%, #faa51a 88.66%);
     z-index: -2;
     margin: 0 20px;
+    border-radius: 0 0 30px 30px;
 }
 .timeline {
     position: relative;
@@ -663,6 +665,8 @@ a {
     padding-bottom: 80px;
     background-color: white;
     margin: 0 20px;
+    margin-top: 25px;
+    border-radius: 30px;
 }
 .equipo h1 {
     color: #5a5a5a;
@@ -781,12 +785,7 @@ form input {
     font-size: 1.5rem;
     margin-bottom: 40px;
 }
-@media (min-width: 900px) {
-    .menus {
-        display: none;
-        background-color: tomato;
-    }
-}
+
 @media (max-width: 1200px) {
     #banner {
         display: none;
@@ -837,6 +836,9 @@ form input {
     }
 }
 @media (max-width: 900px) {
+    .menus {
+        display: none;
+    }
     .left {
         margin-top: 0;
     }
