--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ canvas {
     max-width: 100vw;
     z-index: 2;
     height: 100vh;
-    background-image: url("../img/back.jpg");
+    background-image: url("../img/back.png");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -851,6 +851,7 @@ form input {
     .left {
         margin-top: 50px;
         vertical-align: middle;
+        margin-left: 0;
     }
     .wrapper {
         margin-top: 0;
