--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ canvas {
     max-width: 100vw;
     z-index: 2;
     height: 100vh;
-    background-image: url("../img/back.png");
+    background-image: url("../img/back.jpg");
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
