--- a/css/team.css
+++ b/css/team.css
@@ -117,6 +117,11 @@ body {
     width: 650px;
     right: 5%;
 }
+.flex-header video {
+    position: absolute;
+    width: 650px;
+    right: 5%;
+}
 .naranja {
     height: 30vh;
     background-color: orange;
