--- a/css/style.css
+++ b/css/style.css
@@ -511,7 +511,11 @@ a {
     height: 200px;
     margin: 50px;
 }
+.ultimo {
+    border-radius: 0 0 20px 20px;
+}
 .contenedor {
+    display: none;
     background: linear-gradient(213.54deg, #ebc61d 10.15%, #faa51a 88.66%);
     z-index: -2;
     margin: 0 20px;
@@ -765,6 +769,7 @@ form {
     text-align: left;
 }
 form input {
+    padding-left: 9px;
     background-color: #9b9b9b;
     margin: 20px 0;
     font-size: 15px;
